feat: 更新.env.example文件，添加LANGSMITH相关配置并删除多个Jupyter笔记本
在.env.example中添加LANGSMITH_TRACING和LANGSMITH_API_KEY配置项，以支持新的功能。删除了多个不再使用的Jupyter笔记本文件，包括structured_outpur.ipynb、test_result.md、tool_testing.ipynb和tool.ipynb，以清理项目结构。

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,7 @@ AIHUBMIX_BASE_URL="https://aihubmix.com/api/v1/"
 
 OPENROUTER_API_KEY=""
 OPENROUTER_BASE_URL="https://openrouter.ai/api/v1/"
+
+
+LANGSMITH_TRACING="true"
+LANGSMITH_API_KEY=""
